--- a/biblio.bib
+++ b/biblio.bib
@@ -175,3 +175,128 @@
   Pages                    = {196--201}
 }
 
+@inproceedings{Conitzer2005,
+	author = {Conitzer, Vincent and Sandholm, Tuomas},
+	title = {Communication Complexity of Common Voting Rules},
+	year = {2005},
+	isbn = {1595930493},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/1064009.1064018},
+	doi = {10.1145/1064009.1064018},
+	booktitle = {Proceedings of the 6th ACM Conference on Electronic Commerce},
+	pages = {78–87},
+	numpages = {10},
+	keywords = {communication complexity, voting},
+	location = {Vancouver, BC, Canada},
+	series = {EC '05}
+}
+
+@INPROCEEDINGS{Pini2007,
+	author = {Pini, Maria Silvia and Rossi, Francesca and Venable, Kristen Brent and Walsh, Toby},
+	title = {Incompleteness and Incomparability in Preference Aggregation},
+	booktitle = {IJCAI},
+	year = {2007},
+	pages = {1464-1469},
+	url = {http://dli.iiit.ac.in/ijcai/IJCAI-2007/PDF/IJCAI07-236.pdf},
+	crossref = {DBLP:conf/ijcai/2007},
+	bibsource={DBLP, http://dblp.uni-trier.de},
+}
+
+@inproceedings{Walsh2007,
+	author = {Walsh, Toby},
+	title = {Uncertainty in Preference Elicitation and Aggregation},
+	year = {2007},
+	isbn = {9781577353232},
+	publisher = {AAAI Press},
+	booktitle = {Proceedings of the 22nd National Conference on Artificial Intelligence - Volume 1},
+	pages = {3–8},
+	numpages = {6},
+	location = {Vancouver, British Columbia, Canada},
+	series = {AAAI'07}
+}
+
+@article{Walsh2009,
+	author = {Walsh, Toby},
+	year = {2009},
+	month = {04},
+	pages = {},
+	title = {Complexity of Terminating Preference Elicitation},
+	volume = {2},
+	journal = {Computing Research Repository - CORR}
+}
+
+@article{Conitzer2009,
+	author = {Conitzer, Vincent},
+	title = {Eliciting Single-Peaked Preferences Using Comparison Queries},
+	year = {2009},
+	issue_date = {May 2009},
+	publisher = {AI Access Foundation},
+	address = {El Segundo, CA, USA},
+	volume = {35},
+	number = {1},
+	issn = {1076-9757},
+	journal = {J. Artif. Int. Res.},
+	month = jun,
+	pages = {161–191},
+	numpages = {31}
+}
+
+@inproceedings{Dey2016,
+	author = {Dey, Palash and Misra, Neeldhara},
+	title = {Elicitation for Preferences Single Peaked on Trees},
+	year = {2016},
+	isbn = {9781577357704},
+	publisher = {AAAI Press},
+	booktitle = {Proceedings of the Twenty-Fifth International Joint Conference on Artificial Intelligence},
+	pages = {215–221},
+	numpages = {7},
+	location = {New York, New York, USA},
+	series = {IJCAI'16}
+}
+
+@inproceedings{Dey2016_2,
+	author={Dey,Palash and Misra,Neeldhara},
+	title={Preference Elicitation for Single Crossing Domain},
+	year={2016},
+	cdate={1451606400000},
+	pages={222-228},
+	url={http://www.ijcai.org/Abstract/16/039},
+	booktitle={IJCAI},
+	crossref={conf/ijcai/2016}
+}
+
+@article{Dey2018,
+	title = {Complexity of manipulation with partial information in voting},
+	journal = {Theoretical Computer Science},
+	volume = {726},
+	pages = {78 - 99},
+	year = {2018},
+	issn = {0304-3975},
+	doi = {https://doi.org/10.1016/j.tcs.2018.03.012},
+	url = {http://www.sciencedirect.com/science/article/pii/S0304397518301737},
+	author = {Dey,Palash and Misra,Neeldhara and Y. Narahari},
+	keywords = {Voting, Manipulation, Incomplete information, Algorithm, Computational complexity}
+}
+
+@inproceedings{Endriss2016,
+	author = {Endriss, Ulle and Obraztsova, Svetlana and Polukarov, Maria and Rosenschein, Jeffrey S.},
+	title = {Strategic Voting with Incomplete Information},
+	year = {2016},
+	isbn = {9781577357704},
+	publisher = {AAAI Press},
+	booktitle = {Proceedings of the Twenty-Fifth International Joint Conference on Artificial Intelligence},
+	pages = {236–242},
+	numpages = {7},
+	location = {New York, New York, USA},
+	series = {IJCAI'16}
+}
+
+@article{Dey2018_2,
+	title={Manipulative Elicitation - A New Attack on Elections with Incomplete Preferences},
+	author={Palash Dey},
+	journal={Theor. Comput. Sci.},
+	year={2018},
+	volume={731},
+	pages={36-49}
+}
