--- a/biblio.bib
+++ b/biblio.bib
@@ -198,9 +198,7 @@
 	booktitle = {IJCAI},
 	year = {2007},
 	pages = {1464-1469},
-	url = {http://dli.iiit.ac.in/ijcai/IJCAI-2007/PDF/IJCAI07-236.pdf},
-	crossref = {DBLP:conf/ijcai/2007},
-	bibsource={DBLP, http://dblp.uni-trier.de},
+	url = {http://dli.iiit.ac.in/ijcai/IJCAI-2007/PDF/IJCAI07-236.pdf}
 }
 
 @inproceedings{Walsh2007,
@@ -262,8 +260,7 @@
 	cdate={1451606400000},
 	pages={222-228},
 	url={http://www.ijcai.org/Abstract/16/039},
-	booktitle={IJCAI},
-	crossref={conf/ijcai/2016}
+	booktitle={IJCAI}
 }
 
 @article{Dey2018,
