More TODOs (yeah)

--- a/minimax.tex
+++ b/minimax.tex
@@ -472,7 +472,9 @@ This strategy can be expected to perform well when the chair assigns an importan
 \label{sec:experiments}
 \commentOC{
 	\begin{enumerate}
-		\item Pessimistic VS Elitist
+		\item Pessimistic VS Elitist Geometric
+		\item Pessimistic VS Elitist VS Random
+		\item 2 more lines in table
 		\item Reach regret: $n/10$. For this, we need $m^x n$ questions. (Correct formula)
 		\item find a way of displaying the graph so that it is understandable in B/W.
 		\item Check Pess VS XPess on other sizes.
