new figures and tables, more on rel work

--- a/biblio.bib
+++ b/biblio.bib
@@ -297,3 +297,54 @@
 	volume={731},
 	pages={36-49}
 }
+
+@inproceedings{Elkind2012,
+	author = {Elkind, Edith and Erd\'{e}lyi, G\'{a}bor},
+	title = {Manipulation under Voting Rule Uncertainty},
+	year = {2012},
+	isbn = {0981738125},
+	publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+	address = {Richland, SC},
+	booktitle = {Proceedings of the 11th International Conference on Autonomous Agents and Multiagent Systems - Volume 2},
+	pages = {627–634},
+	numpages = {8},
+	keywords = {uncertainty, computational social choice, manipulation},
+	location = {Valencia, Spain},
+	series = {AAMAS '12}
+}
+
+@inproceedings{Conitzer2011,
+	author={Conitzer, Vincent and Walsh,Toby and Xia,Lirong},
+	title={Dominating Manipulations in Voting with Partial Information},
+	year={2011},
+	cdate={1293840000000},
+	url={http://www.aaai.org/ocs/index.php/AAAI/AAAI11/paper/view/3706},
+	booktitle={AAAI},
+}
+
+@article{Lev2019,
+	author = {Lev, Omer and Meir, Reshef and Obraztsova, Svetlana and Polukarov, Maria},
+	year = {2019},
+	month = {07},
+	pages = {2077-2084},
+	title = {Heuristic Voting as Ordinal Dominance Strategies},
+	volume = {33},
+	journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+	doi = {10.1609/aaai.v33i01.33012077}
+}
+
+@inproceedings{Annemieke2012,
+	author = {Reijngoud, Annemieke and Endriss, Ulle},
+	title = {Voter Response to Iterated Poll Information},
+	year = {2012},
+	isbn = {0981738125},
+	publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+	address = {Richland, SC},
+	booktitle = {Proceedings of the 11th International Conference on Autonomous Agents and Multiagent Systems - Volume 2},
+	pages = {635–644},
+	numpages = {10},
+	keywords = {voting theory, computational social choice},
+	location = {Valencia, Spain},
+	series = {AAMAS '12}
+}
+
