--- a/minimax.tex
+++ b/minimax.tex
@@ -164,13 +164,13 @@ Then, in Section \ref{sec:elicit} we provide an interactive elicitation protocol
 
 \section{Related Work}
 \label{sec:related}
-In a social choice context, an increasing number of authors has been interested in obtaining information about winners with reduced assumptions about the knowledge of the agent preferences, assuming that the voting rule is known. \Citet{Conitzer2005} have studied the complexity of communication, using different voting rules, determining lower and upper bounds for it. They showed that, in the worst case, the agents should send their complete set of preference for most of the rules they investigated. \Citet{Konczak05} have proposed a way to compute possible and necessary winners when the knowledge of agent preferences is only partial, for various voting rules. They also showed that, even though this computation is hard in the general case, their method is polynomial in case of positional scoring rule. Later on, for the necessary winner problem, other authors have proposed polynomial-time algorithms when using maximin and Bucklin \citep{Xia2008}; sufficient conditions that ensure tractability have been proved \citep{Pini2007}.
+In a social choice context, an increasing number of authors has been interested in obtaining information about winners with reduced assumptions about the knowledge of the agent preferences, assuming that the voting rule is known. \Citet{Conitzer2005} have studied the complexity of communication, using different voting rules, determining lower and upper bounds for it. They showed that, in the worst case, the agents should send their complete set of preference for most of the rules they investigated. \Citet{Konczak05} have proposed a way to compute possible and necessary winners when the knowledge of agent preferences is only partial, for various voting rules. They also showed that, even though this computation is hard in the general case, their method is polynomial in case of positional scoring rule. Later on, for the necessary winner problem, other authors have proposed polynomial-time algorithms when using maximin and Bucklin \citep{Xia2008}; showed that the general case remains computationally hard even when restricting to single-peaked preferences \citep{Walsh2007}; proved sufficient conditions that ensure tractability \citep{Pini2007}.
 
 From this starting point, several studies on elicitation of agent preferences have been proposed \citep{Naamani-Dery2015,Kalech2011,Lu2011,Pini2009,Benabbou2016,Cailloux2014,Dey2016,Dey2016_2}, and analysis on when to stop the elicitation process have been conducted \citep{Walsh2009,Conitzer2009}.
 
-Although more interest has been shown in the incompleteness of agent preferences, several authors have considered scenarios where the voting rule is partially defined \citep{Stein1994}. Among others, \citet{Llamazares2013} have considered the problem of dealing with variable weights in positional scoring rules, and \citet{Walsh2007, Viappiani2018} consider the uncertainty in weights assuming a positional scoring rule has been considered under the assumption that the agents preferences are known. \commentOC{Check Walsh.}
+Although more interest has been shown in the incompleteness of agent preferences, several authors have considered scenarios where the voting rule is partially defined. Among others, \citet{Llamazares2013} have considered the problem of dealing with variable weights in positional scoring rules, and \citet{Stein1994,Viappiani2018} consider the uncertainty in weights of a positional scoring rule assuming that the agents preferences are known. 
 
-Studies related to the manipulability of voting rules have been proposed in this context \citep{Endriss2016,Dey2018,Dey2018_2}, studying the reactions of agents when they learn incrementally about other agents preferences.
+Studies related to the manipulability of voting rules have been proposed in this context \citep{Elkind2012,Dey2018,Dey2018_2,Conitzer2011}, and strategic behaviors, when agents learn incrementally about other agents preferences, have been investigated \citep{Endriss2016,Lev2019,Annemieke2012}.
 
 \section{Social choice with partial information}
 \label{sec:background}
@@ -528,9 +528,53 @@ We observe that the Pessimistic strategy is able to reduce the regret almost com
 
 Asking Random questions does not permit to reach a low regret level even after having asked 100 questions, whereas a low regret level (MMR = 1) is reached by Pessimistic before having asked 60 questions.
 
-We also see that Extended pessimistic performs slightly less well than Pessimistic. Although they come close, Extended pessimistic performs significatively less well, in the sense that the numbers are consistently in favor of Pessimistic if running the experiment again.
+We also see that Extended pessimistic performs slightly less well than Pessimistic. Although they come close, Extended pessimistic performs significantly less well, in the sense that the numbers are consistently in favor of Pessimistic if running the experiment again.
 
 We next focus on the Pessimistic strategy, because Extended pessimistic is too slow to be ran repeatedly on much bigger problem sizes.
+\begin{table}
+	\begin{center}
+			\begin{tabular}{S[table-figures-integer=3, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
+				\toprule
+				{k} & {Rnd.} & {sd} & {Pes.} & {sd} & {Eli.} & {sd} \\
+				\midrule
+				0 &20.0 & 0.0 & 20.0 & 0.0&  20.0 & 0.0 \\
+				50 & 19.82 & 0.04 &	15.59 &0.56	&17.38& 0.7\\
+				100 & 19.12	& 0.26&	11.91&	1.26 &15.23& 0.73\\
+				150 & 18.06	& 0.47&	8.92&	1.53 &13.38& 1.11\\
+				200 & 16.89	& 0.62&6.24&2.02&11.76& 1.03\\
+				250 & 15.63 & 0.84&	4.64&1.72&10.56& 0.89\\
+				300 & 14.72	& 0.94&	3.01& 1.35 &10.48& 0.87\\
+				350 & 13.41	& 1.15& 1.76& 0.95&10.48& 0.86\\
+				400 & 11.98	& 0.68&	0.62&0.56 &10.48& 0.86\\
+				\bottomrule
+			\end{tabular}
+	\end{center}
+	\caption{Average MMR in problems of size $(10, 20)$ after $k$ questions and $10$ runs.}
+	\label{tab:biggerSize}
+\end{table}
+
+\begin{table}
+	\begin{center}
+		
+			\begin{tabular}{S[table-figures-integer=3, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
+				\toprule
+				{sd} & {Pes.} & {sd} & {Eli.} & {sd} \\
+				\midrule
+				0	&20.0	&0.0	&20.0	&0.0\\
+				50	&15.96	&0.54	&17.26	&0.42\\
+				100	&12.48	&0.93	&15.6	&0.43\\
+				150	&9.58	&1.37	&13.94	&0.76\\
+				200	&7.43	&1.25	&10.95	&1.12\\
+				250	&5.26	&1.52	&6.6	&0.79\\
+				300	&3.47	&1.32	&6.57	&0.79\\
+				350	&1.75	&1.36	&6.57	&0.79\\
+				400	&0.49	&0.68	&6.57	&0.79\\
+				\bottomrule
+			\end{tabular}
+	\end{center}
+	\caption{Average MMR in problems of size $(10, 20)$ and geometric weights after $k$ questions and $10$ runs.}
+	\label{tab:geometricWeights}
+\end{table}
 
 \subsection{Absolute evaluation of Pessimistic strategy}
 \label{sec:lowRegret}
@@ -587,7 +631,7 @@ We next wonder how fast the regret decreases, measured as a function of the numb
 	\begin{center}
 		\begin{tabular}{S[table-figures-integer=3, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
 			\toprule
-			{p} & {2 ph.\ ca} & {sd} & {2 ph.\ ag} & {sd} \\
+			{p} & {2 ph.\ ca} & {sd} & {2 ph.\ ac} & {sd} \\
 			\midrule
 			0 & 0.66 & 0.67 & 0.65 & 0.65  \\
 			50 & 1.23 & 1.46 & 0.8 & 0.79 \\
@@ -596,7 +640,7 @@ We next wonder how fast the regret decreases, measured as a function of the numb
 			200 & 4.61	& 1.35  & 6.53 & 2.0  \\
 			250 & 8.4 & 1.86 & 	7.69 & 1.24 \\
 			300 &11.07 & 0.86& 11.87 & 1.25 \\
-			350 &&&15.59 & 0.6 \\
+			350 &15.06 & 0.68&15.59 & 0.6 \\
 			400 &20.0 & 0.0 & 20.0 & 20.0 \\
 			\bottomrule
 		\end{tabular}
