--- a/minimax.tex
+++ b/minimax.tex
@@ -472,11 +472,10 @@ This strategy can be expected to perform well when the chair assigns an importan
 \label{sec:experiments}
 \commentOC{
 	\begin{enumerate}
-		\item Pessimistic VS Elitist Geometric
-		\item Pessimistic VS Elitist VS Random
-		\item 2 more lines in table
+		\item Comment on Table Pessimistic VS Elitist Geometric
+		\item Comment on Table Pessimistic VS Elitist VS Random
+		\item Waiting for the result of 2 more lines (p=15,30) in table two phases
 		\item Reach regret: $n/10$. For this, we need $m^x n$ questions. (Correct formula)
-		\item find a way of displaying the graph so that it is understandable in B/W.
 		\item Check Pess VS XPess on other sizes.
 		\item Prop qC in value of information
 		\item Time comparison XPess VS Pess? (If time, check our estimate)
