typo in one table and more lines in twoPhases

--- a/minimax.tex
+++ b/minimax.tex
@@ -557,7 +557,7 @@ We next focus on the Pessimistic strategy, because Extended pessimistic is too s
 		
 			\begin{tabular}{S[table-figures-integer=3, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
 				\toprule
-				{sd} & {Pes.} & {sd} & {Eli.} & {sd} \\
+				{k} & {Pes.} & {sd} & {Eli.} & {sd} \\
 				\midrule
 				0	&20.0	&0.0	&20.0	&0.0\\
 				50	&15.96	&0.54	&17.26	&0.42\\
@@ -633,6 +633,8 @@ We next wonder how fast the regret decreases, measured as a function of the numb
 			{p} & {2 ph.\ ca} & {sd} & {2 ph.\ ac} & {sd} \\
 			\midrule
 			0 & 0.66 & 0.67 & 0.65 & 0.65  \\
+			15 & 0.71 & 0.73 & 0.67	& 0.64 \\
+			30 & 0.62 & 0.5 & 0.8 & 0.62 \\
 			50 & 1.23 & 1.46 & 0.8 & 0.79 \\
 			100 & 2.03 & 1.56 & 1.88 & 1.02  \\
 			150 & 3.41 & 1.79 & 4.07 & 1.51 \\
