related works section

--- a/minimax.tex
+++ b/minimax.tex
@@ -174,7 +174,7 @@ In other papers it was showed that the general case remains computationally hard
 %Later on, for the necessary winner problem, other authors have proposed polynomial-time algorithms when using maximin and Bucklin \citep{Xia2008}; showed that the general case remains computationally hard even when restricting to single-peaked preferences \citep{Walsh2007}; proved sufficient conditions that ensure tractability \citep{Pini2007}.
 
 Thereafter, noticing that in many practical situations there would be too many possible winners but no necessary winners, the importance of proposing efficient elicitation strategies has been identified. 
-Indeeed, several works addressed the problem of  elicitation of agent preferences \citep{Naamani-Dery2015,Kalech2011,Lu2011,Pini2009,Benabbou2016,Dey2016,Dey2016_2} using a variety of approaches (minimax regret, Bayesian methods, etc.), and analysis on when to stop the elicitation process \citep{Walsh2009,Conitzer2009}.
+Indeeed, several works addressed the problem of  elicitation of agent preferences \citep{Naamani-Dery2015,Kalech2011,Lu2011,Pini2009,Benabbou2016,Dey2016,Dey2016_2} using a variety of approaches (minimax regret, Bayesian methods, etc.), and others \citep{Walsh2009,Conitzer2009}  analyzed when to stop the elicitation process.
 
 While most of the focus in the research community has been in dealing with incomplete agent preferences, 
 %Although more interest has been shown in the incompleteness of agent preferences, 
