--- a/minimax.tex
+++ b/minimax.tex
@@ -194,7 +194,7 @@ We consider a set $A$ of $m$ alternatives (products, restaurants, movies, public
 Following the social choice nomenclature, we call {\em profile} the association of a preference to each agent, considering a subset of agents from the set $\N$, and denote a profile by $(\pref_1,\ldots,\pref_n)$.
 A profile is equivalently represented by $\profile=(v_1,\ldots,v_n)$ where $v_j(i) \in \set{1, \ldots, m}$ denotes the rank (position) of alternative $i$ in the preference order $\pref_j$. 
 
-Let $V$ be the set of possible preference profiles (the union, for any integer, $n$ of the $n$-fold cartesian product of the linear orders over the alternatives).
+Let $V$ be the set of possible preference profiles (the union, for any integer $n$, of the $n$-fold cartesian product of the linear orders over the alternatives).
 A social choice function $f : V \rightarrow \powersetz{A}$ associates a profile with a set of winners, where $\powersetz{A}$ represents the set of subsets of $A$ except for the emptyset (sets are used for tied winners).
 Among the many possible social choice functions, we consider {\em positional scoring rules (PSR)}, which attach weights to positions according to the vector $(w_1, \ldots, w_m)$ (also called the scoring vector).
 An alternative obtains a score that depends on the rank obtained in each of the preference orders:
@@ -204,9 +204,9 @@ An alternative obtains a score that depends on the rank obtained in each of the 
 	= \sum_{r=1}^{m} \alpha^{x}_r w_r 
 \end{align}
 where $\alpha^{x}_r$ is the number of times that alternative $x$ was ranked in the $r$-th position.
-The winners are the alternatives with the highest scores.
+The winners are the alternatives with the highest score.
 
-In this work we assume a fixed, but unknown to us, profile $\profile^*$, representing the preferences $\pref_j^*$ of the agents, and a weight vector $\w^*$, representing the preferences of the chair, and we want to reason about partial preference information concerning those objects.
+In this work we assume fixed, but unknown to us, a profile $\profile^*$ representing the preferences $\pref_j^*$ of the agents, and a weight vector $\w^*$, representing the preferences of the chair, and we want to reason about partial preference information concerning those objects.
 At a given time, our knowledge of agent $j$'s preference is encoded by a partial order over the alternatives, thus a transitive and asymmetric binary relation, denoted by $\ppref_j$. 
 In this work we assume that preference information is truthful, i.e. $a \ppref_j b ⇒ a \pref_j^* b$.
 %We use $\prefinc$ to denote incomparability, that is $a \prefinc_{j} b$ iff $a \nppref_j b \wedge b \nppref_j a$.
@@ -240,20 +240,20 @@ We assume that in addition of basic requirements (monotonicity and convexity), t
 In this work we assume that the preferences of the chair are encoded with linear constraints about the vector $\w$, relating the value of the weights of different positions, and the set of these constraints is denoted by $\Co_W$. Moreover, we use $\pw \subseteq \W$ to denote the set of weight vectors compatible with the preferences expressed by the chair about the scoring vector.
 
 Of course it may be difficult for real decision makers to state preferences about the voting rule in such an abstract way.
-These additional preferences can be elicited by asking questions about concrete profiles, for instance, by showing a complete profile of a small synthetic election and asking who should be elected in this case, as shown in Section \ref{sec:elicit}.
+We will show in \cref{sec:elicit} that the additional preferences we use can be elicited by 
+%asking questions about concrete profiles, for instance, by 
+showing a complete profile of a small synthetic election and asking who should be elected in this case.
 
-\section[Minimax regret under partial profile and weight information]{
-	Robust winner determination}
+\section{Robust winner determination}
 \label{sec:mmr}
 In this paper, we consider a setting where both the agent preferences and the preferences of the chair about the voting rule are incomplete.
-Some authors have considered possible and necessary winners assuming a partial profile  \citep{Kalech2011,Xia2008} or assuming an incompletely specified scoring rule \citep{Stein1994};
-however, we note that, in typical settings, there are no necessary winner and too many possible winners.
+As reviewed in \cref{sec:related}, some authors have considered possible and necessary winners assuming a partial profile or assuming an incompletely specified scoring rule, but in typical settings, there are no necessary winner and too many possible winners.
 In practice it is often useful to declare a winner given partial information.
 
 As a decision criterion to determine a winner, we propose to use minimax regret. 
 Minimax regret \citep{Savage1954} is a decision criterion that has been used for robust optimization under data uncertainty \citep{Kouvelis1997} as well as in decision-making with uncertain utility values \citep{Salo2001,Boutilier2006}.
-\citet{Lu2011} have adopted minimax regret for winner determination in social choice with
-the preferences of the agents that are only partially known, while the social choice function is predetermined and known.
+\citet{Lu2011} have adopted minimax regret for winner determination in social choice where
+the preferences of agents that are only partially known, while the social choice function is predetermined and known.
 
 In this work, we consider the simultaneous presence of uncertainty in agent preferences and in weights.
 Using {\em maximum regret} to quantify the worst-case error, the alternatives that minimize this error are selected as tied winners, providing us with a form of robust optimization.
@@ -265,29 +265,29 @@ First of all, $\Regret(x, \profile, \w)$ is the “regret” of selecting $x$ as
 \begin{align} 
 	\Regret(x, \profile, \w) = \max_{y \in A} s(y; \profile,\w) - s(x; \profile, \w).
 \end{align}
-The pairwise max regret $\PMR(x,y;\pprofile,W)$ of $x$ relative to $y$ given partial profile $\pprofile$ and the set of weights $W$
+The pairwise maximum regret $\PMR(x,y;\pprofile,W)$ of $x$ relative to $y$ given the partial profile $\pprofile$ and the set of weights $W$
 is the worst-case loss of choosing $x$ instead of $y$ under all possible realizations of the full profile {\em and} all possible instantiations of the weights:
 \begin{align}
 	\PMR(x,y; \pprofile, W) & = \max_{\w \in W} \max_{\profile \in C(\pprofile)} s(y; \profile,\w) - s(x; \profile,\w).
 \end{align}
 
-Max regret $\MaxR(x;\pprofile,W)$ is the worst-case loss of $x$. That is the loss occurred as the result of an adversarial selection of the complete profile $\profile \in C(\pprofile)$ and of the scoring vector $\w \in W$ that together maximize the loss between $x$ and the true winner under $\profile$ and $\w$.
+The maximum regret $\MaxR(x;\pprofile,W)$ is the worst-case loss of $x$. That is the loss occurred as the result of an adversarial selection of the complete profile $\profile \in C(\pprofile)$ and of the scoring vector $\w \in W$ that together maximize the loss between $x$ and the true winner under $\profile$ and $\w$:
 \begin{align}
 	\MaxR(x; \pprofile, W) & = \max_{y \in A} \PMR(x,y; \pprofile, W)\\
 	& = \max_{\w \in W} \max_{\profile \in C(\profile)} \Regret(x, \profile, \w).
 \end{align}
 
-Finally,  $\MMR(\pprofile,W)$ is the value of minimax regret under $\pprofile$ and $W$, obtained when recommending a minimax optimal alternative $x^*_{\pprofile, W}$:
+Finally,  $\MMR(\pprofile,W)$ is the value of minimax regret under $\pprofile$ and $W$, obtained when recommending a minimax optimal alternative $x^*_{\pprofile, W} \in A^*_{\pprofile, W}$:
 
 \begin{align}
-	\MMR(\pprofile,W) & = \min_{x \in A} \MaxR(x;\pprofile,W) \\
-	x^{*}_{\pprofile,W} \in A^*_{\pprofile, W} & = \argmin_{x \in A} \MaxR(x;\pprofile,W)
+	\MMR(\pprofile,W) & = \min_{x \in A} \MaxR(x;\pprofile,W); \\
+	A^*_{\pprofile, W} & = \argmin_{x \in A} \MaxR(x;\pprofile,W).
 \end{align}
 By picking as consensus choice
 an alternative associated with minimax regret, we can provide a recommendation that gives worst-case guarantees, giving some robustness in face of uncertainty (due to both not knowing the agent preferences and the weights used in the aggregation). 
 In cases of ties in minimax regret, we can either decide to return all minimax alternatives $A^*_{\pprofile, W}$ as winners or to pick just one of them using some tie-breaking strategy.
 
-Observe that if $\MMR(\pprofile, W)\!=\!0$, then $x^{*}_{\pprofile,W}$ is a necessary co-winner; this means that for any valid completion of the profile and any feasible $w \!\in\! W$, $x^{*}_{\pprofile,W}$ obtains a highest score.
+Observe that if $\MMR(\pprofile, W)\!=\!0$, then any $x^{*}_{\pprofile,W} \in A^*_{\pprofile, W}$ is a necessary co-winner; this means that for any valid completion of the profile and any feasible $w \in W$, $x^{*}_{\pprofile,W}$ obtains the highest score.
 
 We note that our notion of regret gives some cardinal meaning to the scores: instead of just being used to select winners under the corresponding PSR, their differences are considered as representing the regret of the chair.
 
@@ -297,7 +297,7 @@ We note that our notion of regret gives some cardinal meaning to the scores: ins
 In order to compute pairwise maximum regret, and therefore minimax regret, we decompose the $\PMR$ into the contributions associated to each agent by adapting the reasoning from \citet{Lu2011}.
 The setting is however more challenging due to the presence of uncertainty in the weights.
 
-Recall that, in the computation of $s(x; \profile, \w)$, $w_{v_j(x)}$ represents the score that $x$ obtains in the ranking $v_j$ (see Equation \ref{eq:srule}).
+Recall that, in the computation of $s(x; \profile, \w)$, $w_{v_j(x)}$ represents the score that $x$ obtains in the ranking $v_j$ (see \cref{eq:srule}).
 Since scoring rules are additively decomposable, we can consider separately the contribution of each agent to the total score. Thus, we can write the actual regret of choosing $x$ instead of $y$ as
 \[
 s(y; \profile,\w) - s(x; \profile, \w) = \sum_{j=1}^n w_{v_j(y)} - w_{v_j(x)},
@@ -332,7 +332,7 @@ As we will show, this procedure can also be used when the weight vector is not c
 	This maximizes the adversary’s interests: because the weight vector is convex, the difference of scores will be lower when both alternatives are ranked lower (Equation \ref{eq:convexity}), and that difference of scores is in favor of $x$ when $x \ppref_j y$, thus to be minimized from the point of view of the adversary.
 \end{proof}
 
-Let ${\pprefeq_j}(x)$ designate the set of alternatives that are known to be considered by $j$ as less good than or equal to $x$, and ${\pprefinv_j}(y)$ be the set of alternatives known to be considered by $j$ as strictly better than $y$.
+Let ${\pprefeq_j}(x)$ designate the set of alternatives known to be considered by $j$ as less good than or equal to $x$, and ${\pprefinv_j}(y)$ be the set of alternatives known to be considered by $j$ as strictly better than $y$.
 \begin{claim}
 	The rank of $x$ in the PMR-maximizing linear orders of agent $j$ is $\hat{v}_{j}(x) = 1+\card{A}-\card{{\pprefeq_j}(x)}$, and the rank of $y$ is $\hat{v}_{j}(y)=1+\card{{\pprefinv_j}(y)}+\card{\beta}$, where $\card{\beta} = \card{A \setminus ({\pprefeq_j}(x) \cup {\pprefinv_j}(y))}$ if $(x \pprefeq_j y)$ and $\card{\beta} = 0$ otherwise.
 \end{claim}
@@ -353,7 +353,7 @@ Let ${\pprefeq_j}(x)$ designate the set of alternatives that are known to be con
 		\label{eq:betteryfinal}
 		a \pref_j y ⇔ 
 		(a \ppref_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a) ∧ ¬(a \ppref_j y)).
-	\end{equation} 
+	\end{equation}
 \end{proof}
 
 The claim can also be understood by observing that in the case $(x \pprefeq_j y)$, $\beta$ is the number of alternatives incomparable with both $x$ and $y$.
@@ -369,11 +369,11 @@ The claim can also be understood by observing that in the case $(x \pprefeq_j y)
 \end{claim}
 The last claim shows that PMR is linear in the weights.
 Recall that the preferences of the chair are encoded with linear constraints $\Co_{W}$.
-The pairwise max regret $\PMR(x,y; \pprofile,W)$ can be obtained as the solution of the following linear program defined on the variables $w_1, …, w_m$, which represent the weights attached to different positions. 
+The pairwise max regret $\PMR(x,y; \pprofile,W)$ can be obtained as the solution of the following linear program defined on the variables $w_1, …, w_m$, which represent the weights attached to different positions:
 
 \begin{align}
 	\max_{\w} & \sum_{r=1}^m (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x}) w_{r}\\
-	\text{ s.t. } & \text{\cref{eq:monotone}} \text{ and } \text{\cref{eq:convexity}} \text{ and } \Co_W
+	\text{ s.t. } & \text{\cref{eq:monotone}} \text{ and } \text{\cref{eq:convexity}} \text{ and } \Co_W.
 \end{align}
 Note that given our choice $w_{1}=1$ and $w_{m}=0$, there are only $m-2$ variables 
 (we leave $w_{1}$ and $w_{m}$ in the LP just for clarity of presentation).
