--- a/minimax.tex
+++ b/minimax.tex
@@ -640,7 +640,7 @@ We next wonder how fast the regret decreases, measured as a function of the numb
 	\begin{center}
 		\begin{tabular}{S[table-figures-integer=3, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
 			\toprule
-			{p} & {2 ph.\ ca} & {sd} & {2 ph.\ ac} & {sd} \\
+			{$q_c$} & {2 ph.\ ca} & {sd} & {2 ph.\ ac} & {sd} \\
 			\midrule
 			0 & 0.66 & 0.67 & 0.65 & 0.65  \\
 			15 & 0.71 & 0.73 & 0.67	& 0.64 \\
@@ -656,7 +656,7 @@ We next wonder how fast the regret decreases, measured as a function of the numb
 			\bottomrule
 		\end{tabular}
 	\end{center}
-	\caption{Average MMR in problems of size $(10, 20)$ after $400$ questions. Where $p$ represents the number of questions asked to the chair.}
+	\caption{Average MMR in problems of size $(10, 20)$ after $400$ questions, among which $q_c$ to the chair.}
 	\label{tab:twoP400}
 \end{table}
 
